--- a/app/src/main/res/values-v11/styles.xml
+++ b/app/src/main/res/values-v11/styles.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<!-- your theme inherits from the material theme -->
-	<style name="AppBaseTheme" parent="android:Theme.Holo.Light">
-		<!-- theme customizations -->
-	</style>
+
+    <style name="AppBaseTheme" parent="@android:style/Theme.Holo">
+
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+
+    </style>
+
+    <!-- ActionBar styles -->
+    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar"><!--Solid.Inverse-->
+        <!--parent="@style/Widget.AppCompat.ActionBar">-->
+        <item name="android:background">#2196F3</item>
+    </style>
+
+
 </resources>
