--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -27,31 +27,36 @@
 				android:layout_height="wrap_content"
 				android:text="@string/etusivu_nappi"
 				android:layout_width="match_parent"
-				android:id="@+id/etusivuNappi"/>
+				android:id="@+id/etusivuNappi"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/ryhma_nappi"
 				android:layout_width="match_parent"
-				android:id="@+id/ryhmaNappi"/>
+				android:id="@+id/ryhmaNappi"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/tapahtuma_nappi"
 				android:layout_width="match_parent"
-				android:id="@+id/tapahtumaNappi"/>
+				android:id="@+id/tapahtumaNappi"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_nappi"
 				android:layout_width="match_parent"
-				android:id="@+id/linkitNappi"/>
+				android:id="@+id/linkitNappi"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/freestyle_nappi"
 				android:layout_width="match_parent"
-				android:id="@+id/freestyleNappi"/>
+				android:id="@+id/freestyleNappi"
+                style="@style/Nappi"/>
 
 			<LinearLayout
 				android:layout_height="wrap_content"
@@ -84,7 +89,8 @@
 				android:layout_height="wrap_content"
 				android:text="@string/yhteistyo_nappi"
 				android:layout_width="match_parent"
-				android:id="@+id/yhteistyoNappi"/>
+				android:id="@+id/yhteistyoNappi"
+                style="@style/Nappi"/>
 
 		</LinearLayout>
 
