--- a/app/src/main/res/layout/yhteystiedot.xml
+++ b/app/src/main/res/layout/yhteystiedot.xml
@@ -3,5 +3,54 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
 	android:id="@+id/tausta">
-    
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView" >
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:id="@+id/textView"
+                    android:layout_gravity="center_horizontal" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="60">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="New Button"
+                        android:id="@+id/button"
+                        android:layout_weight="20"
+                        style="@style/Nappi"/>
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="New Button"
+                        android:id="@+id/button2"
+                        android:layout_weight="20"
+                        style="@style/Nappi"/>
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="New Button"
+                        android:id="@+id/button3"
+                        android:layout_weight="20"
+                        style="@style/Nappi"/>
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
 </LinearLayout>
