--- a/app/src/main/res/layout/yhteystiedot.xml
+++ b/app/src/main/res/layout/yhteystiedot.xml
@@ -17,16 +17,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Text"
+                    android:text="@string/yht_ryhmat"
                     android:id="@+id/textView1"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="34sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Text"
+                    android:text="@string/kalevi_nimi"
                     android:id="@+id/textView2"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="24sp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -37,24 +39,24 @@
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="New Button"
-                        android:id="@+id/button1"
+                        android:text="@string/puhelu_nappi"
+                        android:id="@+id/kaleviPuhelu"
                         android:layout_weight="20"
                         style="@style/Nappi"/>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="New Button"
-                        android:id="@+id/button2"
+                        android:text="@string/viesti_nappi"
+                        android:id="@+id/kaleviViesti"
                         android:layout_weight="20"
                         style="@style/Nappi"/>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="New Button"
-                        android:id="@+id/button3"
+                        android:text="@string/sposti_nappi"
+                        android:id="@+id/kaleviSposti"
                         android:layout_weight="20"
                         style="@style/Nappi"/>
                 </LinearLayout>
@@ -62,16 +64,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Text"
+                    android:text="@string/yht_mainostus"
                     android:id="@+id/textView3"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="34sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Text"
+                    android:text="@string/ari_nimi"
                     android:id="@+id/textView4"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="24sp" />
 
                     <LinearLayout
                         android:orientation="horizontal"
@@ -82,24 +86,24 @@
                             <Button
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="New Button4"
-                                android:id="@+id/button"
+                                android:text="@string/puhelu_nappi"
+                                android:id="@+id/ariPuhelu"
                                 android:layout_weight="20"
                                 style="@style/Nappi"/>
 
                             <Button
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="New Button"
-                                android:id="@+id/button5"
+                                android:text="@string/viesti_nappi"
+                                android:id="@+id/ariViesti"
                                 android:layout_weight="20"
                                 style="@style/Nappi"/>
 
                             <Button
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="New Button"
-                                android:id="@+id/button6"
+                                android:text="@string/sposti_nappi"
+                                android:id="@+id/ariSposti"
                                 android:layout_weight="20"
                                 style="@style/Nappi"/>
                     </LinearLayout>
