--- a/app/src/main/res/layout/etusivu.xml
+++ b/app/src/main/res/layout/etusivu.xml
@@ -33,6 +33,12 @@
 				android:textSize="25sp"
 				android:textColor="#FFFFFF"/>
 
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ajankohtaistaNappi"
+                android:text="@string/ilmottautumislomake_nappi"/>
+
 		</LinearLayout>
 
 	</ScrollView>
