--- a/app/src/main/res/layout/linkit.xml
+++ b/app/src/main/res/layout/linkit.xml
@@ -24,54 +24,94 @@
 			android:layout_width="match_parent"
 			android:orientation="vertical">
 
-			<Button
+            <Button
+                android:layout_height="wrap_content"
+                android:text="@string/linkit_instagram"
+                android:layout_width="fill_parent"
+                android:layout_gravity="center"
+                android:id="@+id/linkitNappiInsta"
+                style="@style/Nappi"/>
+
+            <Button
+                android:layout_height="wrap_content"
+                android:text="@string/linkit_facebook"
+                android:layout_width="fill_parent"
+                android:layout_gravity="center"
+                android:id="@+id/linkitNappiFB"
+                style="@style/Nappi"/>
+
+            <Button
+                android:layout_height="wrap_content"
+                android:text="@string/linkit_twitter"
+                android:layout_width="fill_parent"
+                android:layout_gravity="center"
+                android:id="@+id/linkitNappiTwitter"
+                style="@style/Nappi"/>
+
+            <Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_virkia"
-				android:layout_width="wrap_content"
+				android:layout_width="fill_parent"
 				android:layout_gravity="center"
-				android:id="@+id/linkitNappiVirkia"/>
+				android:id="@+id/linkitNappiVirkia"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_simpsio"
 				android:layout_width="wrap_content"
 				android:layout_gravity="center"
-				android:id="@+id/linkitNappiSimpsio"/>
+				android:id="@+id/linkitNappiSimpsio"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_joupiska"
-				android:layout_width="wrap_content"
+				android:layout_width="fill_parent"
 				android:layout_gravity="center"
-				android:id="@+id/linkitNappiJoupiska"/>
+				android:id="@+id/linkitNappiJoupiska"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_sjh"
-				android:layout_width="wrap_content"
+				android:layout_width="fill_parent"
 				android:layout_gravity="center"
-				android:id="@+id/linkitNappiSJH"/>
+				android:id="@+id/linkitNappiSJH"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_skisport"
-				android:layout_width="wrap_content"
+				android:layout_width="fill_parent"
 				android:layout_gravity="center"
-				android:id="@+id/linkitNappiSkisport"/>
+				android:id="@+id/linkitNappiSkisport"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_lifestyleskiing"
-				android:layout_width="wrap_content"
+				android:layout_width="fill_parent"
 				android:layout_gravity="center"
-				android:id="@+id/linkitNappiLsSCrew"/>
+				android:id="@+id/linkitNappiLSCrew"
+                style="@style/Nappi"/>
 
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_simpsiopark"
-				android:layout_width="wrap_content"
+				android:layout_width="fill_parent"
 				android:layout_gravity="center"
-				android:id="@+id/linkitNappiSimpsioPark"/>
+				android:id="@+id/linkitNappiSimpsioPark"
+                style="@style/Nappi"/>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+
+                </LinearLayout>
 
 		</LinearLayout>
 
