Korjattu kirjoitusvirheitä, nappien kokoja, fontteja, tekstikokoa, sovelluksen päävalikossa ollut Etusivu nappi on nyt Ajankohtaista nappi. Muutamia virheenkorjauksia

--- a/app/src/main/res/layout/etusivu.xml
+++ b/app/src/main/res/layout/etusivu.xml
@@ -37,7 +37,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/ajankohtaistaNappi"
-                android:text="@string/ilmottautumislomake_nappi"/>
+                android:text="@string/ilmottautumislomake_nappi"
+				style="@style/Nappi"/>
 
 		</LinearLayout>
 
