--- a/app/src/main/res/layout/linkit.xml
+++ b/app/src/main/res/layout/linkit.xml
@@ -59,7 +59,7 @@
 			<Button
 				android:layout_height="wrap_content"
 				android:text="@string/linkit_simpsio"
-				android:layout_width="wrap_content"
+				android:layout_width="fill_parent"
 				android:layout_gravity="center"
 				android:id="@+id/linkitNappiSimpsio"
                 style="@style/Nappi"/>
