--- a/app/src/main/res/layout/viestiruutu.xml
+++ b/app/src/main/res/layout/viestiruutu.xml
@@ -9,7 +9,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:id="@+id/viestiKohde"/>
+        android:id="@+id/viestiKohde"
+		android:textSize="24sp"
+		android:textColor="#FFFFFF"/>
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -30,7 +32,7 @@
                 android:hint="@string/viestiohje"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/viesti_lahetys_nappi"
                 android:id="@+id/viestiLahetysNappi"
